--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
-    "react-star-ratings": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
